[package]
name = "epaxos_rs"
version = "0.1.0"
authors = ["Pi Songkuntham <pisong@princeton.edu>"]
license = "MIT"
description = "A Rust implementation of EPaxos"
edition = "2018"

[dependencies]
grpc            = "0.8.3"
grpc-protobuf = "0.8.3"
protobuf        = "2.18.2"
protoc-rust = "2.18.2"
futures         = "0.3.15"
futures-cpupool = "0.1.8"
crossbeam = "0.8.0"
rayon = "1.5.1"

[build-dependencies]
protoc-rust-grpc = "0.8.3"

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "client3"
path = "src/client3.rs"
