[package]
name = "epaxos"
version = "0.3.0"
authors = ["luhuanbing084@gmail.com"]
license = "MIT"
description = "A Rust implementation of EPaxos"
edition = "2018"

[dependencies]
protobuf        = "2.18.2"
futures         = "0.3.15"
futures-cpupool = "0.1.8"
crossbeam = "0.8.0"
rayon = "1.5.1"
grpcio = "0.9.0"
smol = "1.2.5"
thiserror = "1.0.25"
log = "0.4.14"

[build-dependencies]
protoc-grpcio = "3.0.0"
log = "0.4.14"

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "client3"
path = "src/client3.rs"
