[package]
name = "server"
version = "0.1.0"
authors = ["luhuanbing084@gmail.com"]
license = "MIT"
description = "A Rust implementation of EPaxos"
edition = "2018"
keywords = ["Paxos", "EPaxos"]
categories = ["RSM"]

[dependencies]
protobuf        = "2.18.2"
futures         = "0.3.15"
futures-cpupool = "0.1.8"
rayon = "1.5.1"
grpcio = { version = "0.9.0", default-features = false, features = ["protobuf-codec", "use-bindgen"] }
smol = "1.2.5"
thiserror = "1.0.25"
log = "0.4.14"
petgraph = "0.6.0"

[build-dependencies]
protoc-grpcio = "3.0.0"
log = "0.4.14"

[lib]
name = "sharedlib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"